ePortfolio 2.3/src/objects/DOR_LP_Admin__c.object
<CustomObject>
    <description>used to manage custom settings for the registration process</description>
    <fields>
        <fullName>Terms_Archived_Date__c</fullName>
        <label>Terms Archived Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Terms_Body__c</fullName>
        <description>the text for the Terms and Conditions</description>
        <label>Terms Body</label>
        <length>131000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Terms_Published_Date__c</fullName>
        <label>Terms Published Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Terms_Req_New_Signature__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Terms Req New Signature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Terms_Status__c</fullName>
        <label>Terms Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Published</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Archived</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>DOR LP Admin</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DOR LP Admin Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DOR LP Admin</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>